# Automatic_Test_And_Github_Action

./: .gitignore  CONTRIBUTING.md  CPPCHECK.md  README.md  cppcheck.xml  cppcheck_report.txt  doxygen.conf  main.c  run-cppcheck.bat  run-doxygen.bat  test.bat
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: IAR_build.yaml  bx.yaml  codeql.yml  cppcheck.yaml  cppunit.yaml  documentation.yaml  doxygen.yaml  valgrind.yml
Docker/Linux/SimplicityStudio_V4/: .gitignore  Dockerfile  compile.sh
Docker/Linux/arm-none-eabi-x86_64-linux/: Dockerfile
Docker/Windows/: README.md
Docker/Windows/SimplicityStudio/: Dockerfile
Gitlab/: README.md  gitlab-ci.yml
Gitlab/Python-Make/: gitlab-ci.yml
IAR/: compile_output_file.txt  compile_warning_file.txt
IAR/arm/: componentA.ewp  iar-toolchain.cmake
IAR/portable/componentB/: componentB.c
IAR/rh850/: CMakeLists.txt  componentA.ewp  componentB.ewp
IAR/riscv/: componentA.ewp
IAR/rx/: CMakeLists.txt  iar-toolchain.cmake  library.ewp
IAR_compilation/: .gitignore  Jenkinsfile  compilation.txt  compile.bat
IAR_compilation/riscv/: CMakeLists.txt  componentB.ewp  iar-toolchain.cmake
IAR_compilation/rl78/: componentA.ewp
IAR_compilation/rx/: componentB.ewp
Jenkins/IAR/arm/: CMakeLists.txt
Jenkins/IAR/portable/componentA/: componentA.c
Jenkins/IAR/rh850/: iar-toolchain.cmake  library.ewp
Jenkins/IAR/rl78/: componentB.ewp  library.ewp  workspace.eww
Jenkins/IAR/rx/: componentA.ewp
addons/: .gitignore  compile_IAR.bat  cppcheck.xml  run-cppcheck.bat  run-doxygen.bat  run-export-wiki.bat  run-klocwork.bat
addons/compilation_html/: index.html
addons/dashboard/: index.html
addons/doxygen-awesome-css/: Doxyfile
addons/tools/: find-tools.bat
arm/: componentB.ewp  library.ewp
portable/componentA/: componentA.c
riscv/: library.ewp
rl78/: CMakeLists.txt  iar-toolchain.cmake
src/: Makefile  dog.cpp  dog.hpp  main.cpp  utility.cpp
tests/: Makefile  README.md  TestDog.cpp  TestDog.h  TestUtility.cpp  TestUtility.h
tests/cppunit/: INSTALL-WIN32.txt  NEWS
tests/cppunit/doc/: cookbook.dox  other_documentation.dox
tests/cppunit/examples/ClockerPlugIn/: ClockerPlugIn.cpp  Makefile.am
tests/cppunit/examples/DumperPlugIn/: DumperPlugIn.cpp  Makefile.am
tests/cppunit/examples/cppunittest/: Makefile.am  MessageTest.cpp  MessageTest.h  MockTestCase.cpp  OrthodoxTest.h  TrackedTestCase.cpp
tests/cppunit/examples/money/: Makefile.am  MoneyTest.cpp
tests/cppunit/include/cppunit/: Asserter.h  Exception.h  Message.h  TestComposite.h  TestFixture.h  TestLeaf.h  TestListener.h  TestPath.h  TestResult.h  TestResultCollector.h  TestSuite.h  TextOutputter.h  TextTestProgressListener.h
tests/cppunit/include/cppunit/extensions/: RepeatedTest.h  TestCaseDecorator.h  TestDecorator.h  TestFactoryRegistry.h  TestSetUp.h  TestSuiteBuilderContext.h
tests/cppunit/include/cppunit/plugin/: DynamicLibraryManagerException.h  PlugInManager.h
tests/cppunit/include/cppunit/tools/: XmlElement.h
tests/cppunit/src/DllPlugInTester/: CommandLineParserTest.cpp  DllPlugInTester.vcxproj
tests/cppunit/src/cppunit/: DefaultProtector.h  DynamicLibraryManager.cpp  Exception.cpp  PlugInManager.cpp  ProtectorChain.cpp  SynchronizedObject.cpp  TestFactoryRegistry.cpp  TestFailure.cpp  TestResult.cpp  TypeInfoHelper.cpp  Win32DynamicLibraryManager.cpp  cppunit_dll.vcxproj
tests/framework/cppunit/: configure.ac
tests/framework/cppunit/doc/: Money.dox
tests/framework/cppunit/examples/: Makefile.am  ReadMe.txt
tests/framework/cppunit/examples/cppunittest/: MockFunctor.h  MockTestListener.cpp
tests/framework/cppunit/examples/hierarchy/: Makefile.am
tests/framework/cppunit/examples/money/: configure.ac
tests/framework/cppunit/examples/simple/: ExampleTestCase.cpp  Makefile.am
tests/framework/cppunit/include/cppunit/: BriefTestProgressListener.h  CompilerOutputter.h  Portability.h  SynchronizedObject.h  Test.h  TestCase.h  TestRunner.h  TestSuccessListener.h  TextTestResult.h  XmlOutputter.h
tests/framework/cppunit/include/cppunit/config/: config-msvc6.h
tests/framework/cppunit/include/cppunit/plugin/: DynamicLibraryManager.h  TestPlugInDefaultImpl.h
tests/framework/cppunit/include/cppunit/portability/: Stream.h
tests/framework/cppunit/src/cppunit/: Asserter.cpp  DynamicLibraryManagerException.cpp  ProtectorChain.h  Test.cpp  TestCase.cpp  XmlElement.cpp  cppunit.vcxproj
(+1 files in other folders)
