dnl Process this file with autoconf to produce a configure script.
dnl Don't forget to run `aclocal -I /usr/local/share/aclocal` before
dnl running autoconf! This is required for PKG_CHECK_MODULES to work.
AC_INIT([cppunit-cookbook],[1.6.2])
AC_CONFIG_SRCDIR(Makefile.am)
AM_INIT_AUTOMAKE
PKG_CHECK_MODULES([CPPUNIT], [cppunit >= 1.11.6])
AC_PROG_CXX
AC_PROG_CC
AC_PROG_INSTALL
AC_OUTPUT(Makefile)
